@@ -14,20 +14,20 @@
 		<script src="lib/dojo.js"></script>
 		<script src="lib/lz-string.js"></script>
 
-		<script src="core.js?v=1.0.7.2" 		type="text/javascript"></script>
-		<script src="resources.js?v=1.0.7.2" 	type="text/javascript"></script>
-		<script src="calendar.js?v=1.0.7.2" 	type="text/javascript"></script>
-		<script src="buildings.js?v=1.0.7.2" 	type="text/javascript"></script>
-		<script src="village.js?v=1.0.7.2" 		type="text/javascript"></script>
-		<script src="science.js?v=1.0.7.2" 		type="text/javascript"></script>
-		<script src="workshop.js?v=1.0.7.2" 	type="text/javascript"></script>
-		<script src="diplomacy.js?v=1.0.7.2" 	type="text/javascript"></script>
-		<script src="religion.js?v=1.0.7.2" 	type="text/javascript"></script>
-		<script src="achievements.js?v=1.0.7.2" type="text/javascript"></script>
-		<script src="space.js?v=1.0.7.2" 		type="text/javascript"></script>
-		<script src="prestige.js?v=1.0.7.2" 	type="text/javascript"></script>
+		<script src="core.js?v=1.0.7.3" 		type="text/javascript"></script>
+		<script src="resources.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="calendar.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="buildings.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="village.js?v=1.0.7.3" 		type="text/javascript"></script>
+		<script src="science.js?v=1.0.7.3" 		type="text/javascript"></script>
+		<script src="workshop.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="diplomacy.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="religion.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="achievements.js?v=1.0.7.3" type="text/javascript"></script>
+		<script src="space.js?v=1.0.7.3" 		type="text/javascript"></script>
+		<script src="prestige.js?v=1.0.7.3" 	type="text/javascript"></script>
 
-		<script src="game.js?v=1.0.7.2" 		type="text/javascript"></script>
+		<script src="game.js?v=1.0.7.3" 		type="text/javascript"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -123,7 +123,7 @@
 					<a href="#" onclick="dev();">#</a> |
 					<a href="#" onclick="wipe();">Wipe</a> |
 
-					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 1.0.7.2</a>
+					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 1.0.7.3</a>
 
 				</div>
 			</div>
@@ -145,9 +145,9 @@
 						Chronospheres
 						Tankers
 
-					Rev: 2
-						Mobile UI
-						Bugfixing
+					Rev: 3
+						Unicorn Selection
+						GM Catnip
 
 
 				</pre>
